--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-   "name": "fennec-utilities",
-   "version": "1.1.0",
+   "name": "@magicalbunny31/fennec-utilities",
+   "version": "2.0.0",
    "description": "utility package for interacting with fennec 💻",
    "main": "dist/cjs/index.js",
    "module": "dist/esm/index.js",
