--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
    "module": "dist/esm/index.js",
    "types": "types/index.d.ts",
    "files": [
+      "assets",
       "dist",
       "src",
       "types"
