--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "@magicalbunny31/fennec-utilities",
-   "version": "3.7.2",
+   "version": "3.8.0",
    "description": "💻 utility package for interacting with fennec",
    "main": "./dist/cjs/index.js",
    "module": "./dist/esm/index.js",
@@ -27,15 +27,14 @@
    "homepage": "https://github.com/magicalbunny31/fennec-utilities#readme",
    "dependencies": {
       "@magicalbunny31/pawesome-utility-stuffs": "github:magicalbunny31/pawesome-utility-stuffs",
-      "discord.js": "^14.16.3",
-      "set-interval-async": "^3.0.3",
-      "ws": "^8.18.0"
+      "discord.js": "^14.19.3",
+      "set-interval-async": "^3.0.3"
    },
    "devDependencies": {
-      "eslint": "^9.17.0",
-      "globals": "^15.14.0"
+      "eslint": "^9.26.0",
+      "globals": "^16.1.0"
    },
    "engines": {
-      "node": ">=18"
+      "node": ">=22.12.0"
    }
 }
